# cctp-rs

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  REUSE.toml  TESTNET_VALIDATION.md  deny.toml  flake.nix
.cargo/: audit.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  security.yml
abis/: v2_message_transmitter.json  v2_token_messenger.json
abis/v2/: README.md  message_transmitter_v2.json  token_messenger_v2.json  token_minter_v2.json
examples/: attestation_monitoring.rs  basic_bridge.rs  complete_bridge_trace.rs  debug_message.rs  multi_chain.rs  recover_transfer.rs  test_fakes.rs  testnet_validation.rs  trace_bridge_flow.rs  v2_fast_transfer.rs  v2_integration_validation.rs  v2_standard_transfer.rs
src/: attestation.rs  bridge.rs  chain.rs  domain_id.rs  error.rs  lib.rs  message_transmitter.rs  provider.rs  receipt_adapter.rs  spans.rs  testing.rs  token_messenger.rs  traits.rs
src/bridge/: bridge_trait.rs  cctp.rs  config.rs  mod.rs  multicall.rs  params.rs  v2.rs
src/chain/: addresses.rs  config.rs  mod.rs  v2.rs
src/contracts/: erc20.rs  message_transmitter.rs  mod.rs  token_messenger.rs
src/contracts/v2/: message_transmitter_v2.rs  mod.rs  token_messenger_v2.rs
src/protocol/: attestation.rs  domain_id.rs  finality.rs  message.rs  mod.rs
src/providers/: alloy.rs  iris.rs  mod.rs  tokio_clock.rs
tests/: bridge_integration_tests.rs
