[package]
name = "cctp-rs"
version = "0.5.0"
edition = "2021"
authors = ["Joseph Livesey <joseph@semiotic.ai>"]
categories = ["finance", "api-bindings"]
description = "Rust SDK for CCTP"
homepage = "https://crates.io/crates/cctp-rs"
keywords = ["defi", "ethereum", "web3", "blockchain", "sdk"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/semiotic-ai/cctp-rs"

[dependencies]
alloy-chains = "0.2.15"
alloy-contract = { version = "1.0.41", default-features = false }
alloy-dyn-abi = { version = "1.4.0", default-features = false }
alloy-json-rpc = { version = "1.0.41", default-features = false }
alloy-network = { version = "1.0.41", default-features = false }
alloy-primitives = { version = "1.4.0", default-features = false, features = [
    "std",
    "rlp",
] }
alloy-provider = { version = "1.0.41", default-features = false, features = [
    "anvil-node",
    "reqwest",
] }
alloy-rpc-types = "1.0.42"
alloy-sol-types = { version = "1.4.0", features = ["json"] }
alloy-transport = { version = "1.0.41", default-features = false }
bon = "3.8.1"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1", default-features = false, features = ["time"] }
tracing = "0.1.41"

[dev-dependencies]
rstest = "0.26"
tokio = { version = "1.0", features = [
    "test-util",
    "macros",
    "rt-multi-thread",
] }
tracing-subscriber = "0.3"
