[package]
name = "cctp-rs"
version = "2.0.0"
edition = "2021"
authors = ["Joseph Livesey <joseph@semiotic.ai>"]
categories = ["finance", "api-bindings"]
description = "Rust SDK for CCTP"
homepage = "https://crates.io/crates/cctp-rs"
keywords = ["defi", "ethereum", "web3", "blockchain", "sdk"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/semiotic-ai/cctp-rs"

[dependencies]
alloy-chains = "0.2"
alloy-contract = { version = "1.2", default-features = false }
alloy-dyn-abi = { version = "1.5", default-features = false }
alloy-json-rpc = { version = "1.2", default-features = false }
alloy-network = { version = "1.2", default-features = false }
alloy-primitives = { version = "1.5", default-features = false, features = [
    "std",
    "rlp",
] }
alloy-provider = { version = "1.2", default-features = false, features = [
    "anvil-node",
    "reqwest",
] }
alloy-rpc-types = "1.2"
alloy-sol-types = { version = "1.5", features = ["json"] }
alloy-transport = { version = "1.2", default-features = false }
async-trait = "0.1"
bon = "3.8"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", default-features = false, features = ["time"] }
tracing = "0.1"
url = "2.5"

[dev-dependencies]
alloy-signer-local = "1.2"
insta = "1.45"
rstest = "0.26"
tokio = { version = "1.48", features = [
    "test-util",
    "macros",
    "rt-multi-thread",
] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
